--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "delegated-events": "^0.3.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "qwest": "^4.4.5",
